--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,7 @@ services:
   # 2. FastAPI Web Server
   - type: web
     name: link-collector-api
+    plan: free
     env: docker
     dockerfilePath: ./apps/api/Dockerfile
     dockerContext: ./apps/api
@@ -34,6 +35,7 @@ services:
   # 3. Arq Background Worker
   - type: worker
     name: link-collector-arq-worker
+    plan: free
     env: docker
     dockerfilePath: ./apps/api/Dockerfile
     dockerContext: ./apps/api
