Remove Redis from Blueprint to fix free tier limit

--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,5 @@
 services:
-  # 1. Redis Managed Instance
-  - type: redis
-    name: link-collector-redis
-    ipAllowList: [] # internally accessible only
-    plan: free # Change to starter/standard in production
-
-  # 2. FastAPI Web Server
+  # 1. FastAPI Web Server
   - type: web
     name: link-collector-api
     plan: free
@@ -13,11 +7,9 @@ services:
     dockerfilePath: ./apps/api/Dockerfile
     dockerContext: ./apps/api
     envVars:
+      # Manually provide your existing Free Redis URL here
       - key: REDIS_URL
-        fromService:
-          type: redis
-          name: link-collector-redis
-          property: connectionString
+        sync: false
       # Add placeholders for manual configuration in Render Dashboard
       - key: OPENAI_API_KEY
         sync: false
@@ -32,7 +24,7 @@ services:
       - key: NEXT_PUBLIC_SUPABASE_ANON_KEY
         sync: false
 
-  # 3. Arq Background Worker
+  # 2. Arq Background Worker
   - type: worker
     name: link-collector-arq-worker
     plan: free
@@ -42,10 +34,7 @@ services:
     dockerCommand: arq worker.WorkerSettings
     envVars:
       - key: REDIS_URL
-        fromService:
-          type: redis
-          name: link-collector-redis
-          property: connectionString
+        sync: false
       # Add placeholders for manual configuration in Render Dashboard
       - key: OPENAI_API_KEY
         sync: false
